--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
     <title>Navbar Toggle</title>
   </head>
   <body>
-    <h1>Navbar Toggle</h1>
+    <div class="container">
+      <div class="navbar navbar-header">
+        <h1><i class="fa-solid fa-poo"></i>coding <span>addict</span></h1>
+      </div>
+      <div class="navbar navbar-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+      <div class="navbar navbar-menu">
+        <ul class="navbar-links">
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">project</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </div>
+    </div>
     <!-- javaScript -->
     <script src="./app.js"></script>
   </body>
